// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration renders a comprehensive markdown document (snapshot) 1`] = `
<View
  style={{}}
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 32,
          },
        ]
      }
    >
      <Text>
        Heading 1
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 24,
          },
        ]
      }
    >
      <Text>
        Heading 2
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 18,
          },
        ]
      }
    >
      <Text>
        Heading 3
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text>
        This is a 
      </Text>
      <Text
        style={
          {
            "fontWeight": "bold",
          }
        }
      >
        <Text>
          bold
        </Text>
      </Text>
      <Text>
         and 
      </Text>
      <Text
        style={
          {
            "fontStyle": "italic",
          }
        }
      >
        <Text>
          italic
        </Text>
      </Text>
      <Text>
         and 
      </Text>
      <Text
        style={
          {
            "textDecorationLine": "line-through",
          }
        }
      >
        <Text>
          strikethrough
        </Text>
      </Text>
      <Text>
         paragraph.
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text
        onPress={[Function]}
        style={
          {
            "textDecorationLine": "underline",
          }
        }
      >
        <Text>
          A link
        </Text>
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://example.com/image.png",
        }
      }
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        ·
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Unordered item 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        ·
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Unordered item 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        1
        .
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Ordered item 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        2
        .
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Ordered item 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text
        style={
          {
            "backgroundColor": "#f5f5f5",
            "borderColor": "#CCCCCC",
            "borderRadius": 4,
            "borderWidth": 1,
            "padding": 10,
          }
        }
      >
        inline code
      </Text>
    </Text>
  </View>
  <Text
    style={
      {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#CCCCCC",
        "borderRadius": 4,
        "borderWidth": 1,
        "padding": 10,
      }
    }
  >
    code block

  </Text>
  <View
    style={
      {
        "backgroundColor": "#CCCCCC",
        "margin": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-start",
          "marginBottom": 10,
          "marginTop": 10,
        }
      }
    >
      <Text
        style={{}}
      >
        <Text>
          Blockquote text
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#000000",
          "borderRadius": 3,
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <View
        style={
          [
            {
              "borderBottomWidth": 1,
              "borderColor": "#000000",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Header A
            </Text>
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Header B
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "borderBottomWidth": 1,
              "borderColor": "#000000",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Cell 1
            </Text>
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Cell 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#000000",
          "height": 1,
        },
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text>
        Hard line break follows
      </Text>
      <Text>
        

      </Text>
      <Text>
        next line
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Integration renders with a custom render rule override 1`] = `
<View
  style={{}}
>
  <View
    testID="custom-heading"
  >
    <Text>
      CUSTOM: 
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 24,
          },
        ]
      }
    >
      <Text>
        Heading 2
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 18,
          },
        ]
      }
    >
      <Text>
        Heading 3
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text>
        This is a 
      </Text>
      <Text
        style={
          {
            "fontWeight": "bold",
          }
        }
      >
        <Text>
          bold
        </Text>
      </Text>
      <Text>
         and 
      </Text>
      <Text
        style={
          {
            "fontStyle": "italic",
          }
        }
      >
        <Text>
          italic
        </Text>
      </Text>
      <Text>
         and 
      </Text>
      <Text
        style={
          {
            "textDecorationLine": "line-through",
          }
        }
      >
        <Text>
          strikethrough
        </Text>
      </Text>
      <Text>
         paragraph.
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text
        onPress={[Function]}
        style={
          {
            "textDecorationLine": "underline",
          }
        }
      >
        <Text>
          A link
        </Text>
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://example.com/image.png",
        }
      }
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        ·
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Unordered item 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        ·
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Unordered item 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        1
        .
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Ordered item 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        2
        .
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Ordered item 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text
        style={
          {
            "backgroundColor": "#f5f5f5",
            "borderColor": "#CCCCCC",
            "borderRadius": 4,
            "borderWidth": 1,
            "padding": 10,
          }
        }
      >
        inline code
      </Text>
    </Text>
  </View>
  <Text
    style={
      {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#CCCCCC",
        "borderRadius": 4,
        "borderWidth": 1,
        "padding": 10,
      }
    }
  >
    code block

  </Text>
  <View
    style={
      {
        "backgroundColor": "#CCCCCC",
        "margin": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-start",
          "marginBottom": 10,
          "marginTop": 10,
        }
      }
    >
      <Text
        style={{}}
      >
        <Text>
          Blockquote text
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#000000",
          "borderRadius": 3,
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <View
        style={
          [
            {
              "borderBottomWidth": 1,
              "borderColor": "#000000",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Header A
            </Text>
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Header B
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "borderBottomWidth": 1,
              "borderColor": "#000000",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Cell 1
            </Text>
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Cell 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#000000",
          "height": 1,
        },
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text>
        Hard line break follows
      </Text>
      <Text>
        

      </Text>
      <Text>
        next line
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Integration renders with custom styles applied 1`] = `
<View
  style={{}}
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "color": "red",
            "fontSize": 48,
          },
        ]
      }
    >
      <Text>
        Heading 1
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 24,
          },
        ]
      }
    >
      <Text>
        Heading 2
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        [
          {},
          {},
          {
            "fontSize": 18,
          },
        ]
      }
    >
      <Text>
        Heading 3
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text>
        This is a 
      </Text>
      <Text
        style={
          {
            "color": "blue",
          }
        }
      >
        <Text>
          bold
        </Text>
      </Text>
      <Text>
         and 
      </Text>
      <Text
        style={
          {
            "fontStyle": "italic",
          }
        }
      >
        <Text>
          italic
        </Text>
      </Text>
      <Text>
         and 
      </Text>
      <Text
        style={
          {
            "textDecorationLine": "line-through",
          }
        }
      >
        <Text>
          strikethrough
        </Text>
      </Text>
      <Text>
         paragraph.
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text
        onPress={[Function]}
        style={
          {
            "textDecorationLine": "underline",
          }
        }
      >
        <Text>
          A link
        </Text>
      </Text>
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://example.com/image.png",
        }
      }
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        ·
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Unordered item 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        ·
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Unordered item 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        1
        .
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Ordered item 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "lineHeight": 36,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        2
        .
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
              "flexWrap": "wrap",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Ordered item 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text
        style={
          {
            "backgroundColor": "#f5f5f5",
            "borderColor": "#CCCCCC",
            "borderRadius": 4,
            "borderWidth": 1,
            "padding": 10,
          }
        }
      >
        inline code
      </Text>
    </Text>
  </View>
  <Text
    style={
      {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#CCCCCC",
        "borderRadius": 4,
        "borderWidth": 1,
        "padding": 10,
      }
    }
  >
    code block

  </Text>
  <View
    style={
      {
        "backgroundColor": "#CCCCCC",
        "margin": 20,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-start",
          "marginBottom": 10,
          "marginTop": 10,
        }
      }
    >
      <Text
        style={{}}
      >
        <Text>
          Blockquote text
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#000000",
          "borderRadius": 3,
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <View
        style={
          [
            {
              "borderBottomWidth": 1,
              "borderColor": "#000000",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Header A
            </Text>
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Header B
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "borderBottomWidth": 1,
              "borderColor": "#000000",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Cell 1
            </Text>
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "padding": 5,
              },
            ]
          }
        >
          <Text
            style={{}}
          >
            <Text>
              Cell 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#000000",
          "height": 1,
        },
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
      }
    }
  >
    <Text
      style={{}}
    >
      <Text>
        Hard line break follows
      </Text>
      <Text>
        

      </Text>
      <Text>
        next line
      </Text>
    </Text>
  </View>
</View>
`;
